hphp/test/zend/good/tests/classes/private_005b.php.expectf
Call show()

Fatal error: Call to private method pass::show() from context 'fail' in %s/private_005b.php on line 15
